feat: 🎸 read any property not just version

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,9 +27,18 @@ jobs:
     - name: Unit Test
       run: npm test
 
-    - name: Local action test
+    - name: Local action test with version
       uses: ./
       id: version
 
     - name: Get version
-      run: echo "Version is  ${{ steps.version.outputs.version }}"
+      run: echo "Version is  ${{ steps.version.outputs.propertyValue }}"
+
+    - name: Local action test with description
+      uses: ./
+      with: 
+          propertyKey: "description"
+      id: description
+
+    - name: Get description
+      run: echo "Description is  ${{ steps.description.outputs.propertyValue }}"
