--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@feature/read-any-property
 
-    - uses: actions/cache@v1
+    - uses: actions/cache@feature/read-any-property
       id: cache
       with:
         path: node_modules
