--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.0.0-prerelease
+    - uses: actions/checkout@v1
 
-    - uses: actions/cache@v2.0.0-prerelease
+    - uses: actions/cache@v1
       id: cache
       with:
         path: node_modules
